--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,9 @@
     <string name="participated">Participated: 12 weeks</string>
     <string name="user">user</string>
     <string name="description">Description:</string>
-    <string name="description_content">*P2g Store: Your Style, Your Statement* P2g Store is a vibrant fashion destination offering a wide variety of clothing for every style and occasion. From casual essentials to bold statement pieces, we bring you a curated selection of apparel that lets you express your unique personality. Our *Popular Product* line features the exclusive **T1 Worlds 2024 Collection*-a must-have for fans and fashion enthusiasts alike. With its sleek designs and premium quality, this collection captures the spirit of champions, blending style with the energy of the global stage. At P2g Store, we believe fashion should be exciting, accessible, and tailored to you. Step into a world where every outfit tells a story-your story.</string>
+    <string name="description_content">*P2g Store: Your Style, Your Statement*\n P2g Store is a vibrant fashion destination offering a wide variety of clothing for every style and occasion. From casual essentials to bold statement pieces, we bring you a curated selection of apparel that lets you express your unique personality.\n Our *Popular Product* line features the exclusive **T1 Worlds 2024 Collection*-a must-have for fans and fashion enthusiasts alike. With its sleek designs and premium quality, this collection captures the spirit of champions, blending style with the energy of the global stage. At P2g Store, we believe fashion should be exciting, accessible, and tailored to you. Step into a world where every outfit tells a story-your story.</string>
+    <string name="product_number">30 products</string>
+    <string name="address">Address: 227 Nguyen Van Cu Street, Ward 4, District 5, Ho Chi Minh City</string>
+    <string name="verified_stores">Verified Stores</string>
+    <string name="shop_information">P2q Store Information</string>
 </resources>
