--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,15 @@
     <string name="size">Size:</string>
     <string name="add_to_cart">"ADD TO CART "</string>
     <string name="buy_now_button">BUY NOW</string>
+    <string name="order_summary">Order Summary</string>
+    <string name="sub_total">Sub total</string>
+    <string name="total_quantity">Total quantity</string>
+    <string name="delivery">Delivery</string>
+    <string name="total">Total</string>
+    <string name="information">Information</string>
+    <string name="name_address">Your Name - Address</string>
+    <string name="payment_method">Payment Method</string>
+    <string name="cash">Cash</string>
+    <string name="order_now">Order Now</string>
+    <string name="my_cart">My Cart</string>
 </resources>
